[package]
name = "proxima-macros"
description = "Proc-macro support for proxima test fixtures, runtime entrypoints, telemetry spans, schema description, and error derives"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true

[lib]
proc-macro = true

[dependencies]
syn = { workspace = true, features = ["full"] }
quote = { workspace = true }
proc-macro2 = { workspace = true }
proc-macro-crate = "3"

[dev-dependencies]
criterion = { workspace = true, features = ["html_reports"] }
proxima = { workspace = true, features = ["test-support"] }
rstest.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["macros", "rt"] }
trybuild = { workspace = true }

[lints]
workspace = true

[[bench]]
name = "bench_error_derive"
harness = false
