[package]
name = "proxima-memcached"
description = "Memcached client facade: the async client Pipe and blocking driver over the sans-IO memcached text-protocol codec (ClientSession), so proxima::Client speaks memcached. The codec itself lives in proxima-protocols::memcached."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true

[dependencies]
# the sans-IO memcached text-protocol codec (Command/ParseError/parse_command,
# the Connection FSM, the Reply model, and the MemcachedRequest-over-Pipe
# contract) — see proxima_protocols::memcached docs.
proxima-protocols = { workspace = true, default-features = false, features = ["memcached"] }
# the async client Pipe + sans-IO ClientSession. `alloc` (no std) keeps the
# bare codec graph tokio-free; the `client` feature lifts proxima-primitives
# to std (the StreamUpstream edge the driver needs).
proxima-primitives = { workspace = true, default-features = false, features = ["alloc"], optional = true }
proxima-core = { workspace = true, default-features = false, optional = true }
bon = { workspace = true, optional = true }
bytes = { workspace = true, optional = true }
conflaguration = { workspace = true, features = ["derive", "toml"], optional = true }
futures = { workspace = true, features = ["std", "async-await"], optional = true }
serde = { workspace = true, features = ["derive"], optional = true }
thiserror = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }
# the tokio-free native listener stack: `MemcachedAnyProtocol` mounts into
# `proxima-listen`'s `AnyListenProtocol` open universal listener over the
# runtime-matched acceptor factory — see the `listen` feature below.
proxima-listen = { workspace = true, optional = true }
proxima-runtime = { workspace = true, features = ["std"], optional = true }
serde_json = { workspace = true, optional = true }

[features]
default = ["std"]
std = []
# the async client `Pipe` + `PipeFactory` driving the sans-IO ClientSession over
# a `StreamUpstream`, so `proxima::Client` speaks memcached as a registered
# protocol. `--no-default-features` leaves the bare sans-IO codec with zero
# tokio in the dependency graph for bare-metal embedding.
client = [
    "std",
    "proxima-primitives/std",
    "proxima-core/std",
    "dep:proxima-primitives",
    "dep:proxima-core",
    "dep:bon",
    "dep:bytes",
    "dep:conflaguration",
    "dep:futures",
    "dep:serde",
    "dep:thiserror",
    "dep:tracing",
]
# the tokio-free native (sans-IO) memcached LISTENER: `MemcachedFramedApp`
# + `MemcachedAnyProtocol`, built on `proxima-listen`'s generic
# `FramedAny<C>` stateless `AnyProtocol` driver, mounting into
# `AnyListenProtocol`'s open universal listener over the runtime-matched
# acceptor factory. Mirrors `proxima-redis`'s own `listen` feature name,
# though redis still drives its own bespoke `serve_connection` (pub/sub
# needs per-connection push state `FramedAny`'s stateless shape can't
# carry) — memcached is genuinely stateless per command, so it reshapes
# fully onto the generic driver. `--no-default-features` leaves the bare
# sans-IO codec (and the `client` graph) with zero tokio.
listen = [
    "std",
    "proxima-primitives/std",
    "proxima-core/std",
    "proxima-core/io-async-compat",
    "dep:proxima-primitives",
    "dep:proxima-core",
    "dep:bon",
    "dep:bytes",
    "dep:conflaguration",
    "dep:serde",
    "dep:thiserror",
    "dep:tracing",
    "dep:proxima-listen",
    "dep:proxima-runtime",
    "dep:serde_json",
    "proxima-listen/framed-any",
    "proxima-protocols/memcached-codec-trait",
]

[dev-dependencies]
serde_json = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread", "net", "io-util", "time"] }
rstest = { workspace = true }
# the tokio<->futures::io compat wrapper (`TokioTcpConnection`) this
# crate's own `tests/any_protocol_end_to_end.rs` needs to drive
# `MemcachedAnyProtocol` over a real loopback socket (mirrors
# `proxima-mqtt`'s identical dev-dependency line for the same reason).
proxima-net = { workspace = true, features = ["tokio"] }
# `tokio` alongside `test-support`: in-tree tests use
# `#[proxima::test(runtime = "tokio")]`, whose `run_tokio*` drivers live
# behind `proxima-test/tokio-driver` — only reachable transitively through
# `proxima`'s own `tokio` feature (mirrors `proxima-redis`'s identical
# dev-dependency line for the same reason).
proxima = { workspace = true, features = ["test-support", "tokio"] }

[lints]
workspace = true
